WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271027
REGRESSION (
273517@main
): Find highlight bounces on existing match before moving to the new one
https://bugs.webkit.org/show_bug.cgi?id=271027
Summary
REGRESSION (273517@main): Find highlight bounces on existing match before mov...
Charlie Wolfe
Reported
2024-03-14 18:36:11 PDT
rdar://124650421
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-03-14 18:39:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25922
EWS
Comment 2
2024-03-15 10:00:45 PDT
Committed
276169@main
(ed5868ae0c96): <
https://commits.webkit.org/276169@main
> Reviewed commits have been landed. Closing PR #25922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug