REGRESSION (273517@main): Find highlight bounces on existing match before moving to the new one https://bugs.webkit.org/show_bug.cgi?id=271027 rdar://124650421

Reviewed by Tim Horton.

If selection is not being updated the find indicator should not be updated either.

* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::updateFindUIAfterPageScroll):

Canonical link: https://commits.webkit.org/276169@main